#SET(CMAKE_BUILD_TYPE Debug)
ADD_EXECUTABLE(out FM.cpp FM_func.cpp ReadFile.cpp WriteFile.cpp Cell.cpp Net.cpp Block.cpp CellDist.cpp)
ADD_EXECUTABLE(FM FM_program.cpp FM_func.cpp ReadFile.cpp WriteFile.cpp Cell.cpp Net.cpp Block.cpp CellDist.cpp)
#ADD_EXECUTABLE(out09 FM09.cpp FM_func.cpp ReadFile.cpp WriteFile.cpp Cell.cpp Net.cpp Block.cpp CellDist.cpp)
#ADD_EXECUTABLE(tout Test.cpp FM_func.cpp ReadFile.cpp WriteFile.cpp Cell.cpp Net.cpp Block.cpp CellDist.cpp)